--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "firebase": "^9.1.3",
     "next": "11.1.2",
+    "next-videos": "^1.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-firebaseui": "^5.0.2"
+    "react-firebaseui": "^5.0.2",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.7",
