デプロイ修正

--- a/firebase.json
+++ b/firebase.json
@@ -5,10 +5,17 @@
   },
   "hosting": {
     "public": "public",
+    "predeploy": "yarn build && yarn export",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
     ]
   },
   "storage": {
