--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.5.0",
     "firebase": "^9.1.3",
     "next": "11.1.2",
     "next-videos": "^1.4.0",
