--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "export": "next export"
   },
   "dependencies": {
+    "@ffmpeg/core": "^0.9.0",
+    "@ffmpeg/ffmpeg": "^0.9.8",
     "@react-google-maps/api": "^2.5.0",
     "firebase": "^9.1.3",
     "next": "11.1.2",
     "next-videos": "^1.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-ffmpeg": "^0.0.35",
     "sweetalert": "^2.1.2"
   },
   "devDependencies": {
