--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "export": "next export"
   },
   "dependencies": {
+    "@ffmpeg/core": "^0.9.0",
+    "@ffmpeg/ffmpeg": "^0.9.8",
     "@react-google-maps/api": "^2.5.0",
     "firebase": "^9.1.3",
     "next": "11.1.2",
