--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "export": "next export"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
+    "@mui/icons-material": "^5.2.0",
+    "@mui/material": "^5.2.2",
+    "@mui/styled-engine-sc": "^5.1.0",
     "@react-google-maps/api": "^2.5.0",
     "firebase": "^9.1.3",
     "next": "11.1.2",
@@ -18,6 +23,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-modal": "^3.14.4",
+    "styled-components": "^5.3.3",
     "sweetalert": "^2.1.2"
   },
   "devDependencies": {
